# customgpt-backend

./: .env  .gitignore  pyproject.toml
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
