[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI app with NeonDB and OAuth2 JWT Authentication"
authors = ["Your Name <youremail@example.com>"]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
